--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.13",
+    "vue-axios": "^3.2.4",
     "vue-loader": "^15.9.7",
+    "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.13"
   },
   "version": "0.1.0",
